# projet-archilog-budget_flask

./: .pdm-python  pyproject.toml
archilog-0.1/: .env  .pdm-python  PKG-INFO  README.md  data.db  dev.env  entries.csv  pyproject.toml  run.py
archilog-0.1/src/: data.db
archilog-0.1/src/archilog/: __init__.py  error_handlers.py  forms.py  models.py  services.py  views.py
archilog-0.1/src/archilog/errors/: handlers.py
archilog-0.1/src/archilog/routes/: __init__.py  main.py  web_ui.py
archilog-0.1/src/archilog/static/: style.css
archilog-0.1/src/archilog/templates/: 404.html  500.html  all_entries.html  delete.html  entry_specifique.html  home.html  import_csv.html  index.html  update.html
archilog-0.1/src/archilog/views/: __init__.py  api.py  cmd.py  web_ui.py
archilog-0.1/src/instance/: data.db
