[project]
name = "archilog"
version = "0.1"
description = "A simple project for educational purpose."
readme = "README.md"
dependencies = [
    "click>=8.1.8",
    "sqlalchemy>=2.0.40",
    "flask>=3.1.0",
    "python-dotenv>=1.0.1",
    "flask-wtf>=1.2.2",
    "wtf>=0.1",
    "Flask-HTTPAuth>=4.8.0",
    "spectree>=1.4.6",
    "pydantic>=2.11.3",
    "flask-jwt-extended>=4.7.1",
]
requires-python = ">=3.10"

[project.license]
text = "MIT"

[project.scripts]
archilog = "archilog.views.cmd:cli"

[build-system]
requires = [
    "pdm-backend",
]
build-backend = "pdm.backend"

[tool.pdm.scripts]
_.env_file = "dev.env"
start = "flask --app archilog.views run"
